[ADD] Function to manually perform a forward pass

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,8 +30,10 @@ include_package_data = True
 setup_requires =
   setuptools_scm
 # Dependencies of the project (semicolon/line-separated):
-install_requires =
-    # numpy
+install_requires = # NOTE: Probably a good idea to pins versions for reproducibility
+    torch==2.1.1
+    numpy==1.26.2
+    einops==0.7.0
     # backpack-for-pytorch @ git+https://git@github.com/f-dangel/backpack.git@development#egg=backpack-for-pytorch
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
