--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ install_requires = # NOTE: Probably a good idea to pins versions for reproducibi
     torch==2.1.1
     numpy==1.26.2
     einops==0.7.0
+    maplotlib==3.8.2
     # backpack-for-pytorch @ git+https://git@github.com/f-dangel/backpack.git@development#egg=backpack-for-pytorch
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
