--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ install_requires = # NOTE: Probably a good idea to pins versions for reproducibi
     numpy==1.26.2
     einops==0.7.0
     matplotlib==3.8.2
+    scipy==1.12.0
     # backpack-for-pytorch @ git+https://git@github.com/f-dangel/backpack.git@development#egg=backpack-for-pytorch
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
