--- a/kfac_pinns_exp/exp09_kfac_optimizer/sweep_KFACForPINNs.yaml
+++ b/kfac_pinns_exp/exp09_kfac_optimizer/sweep_KFACForPINNs.yaml
@@ -4,7 +4,7 @@ command:
     - python
     - ${program}
     - "--wandb"
-    - "--optimizer=KFACForPINNs"
+    - "--optimizer=KFAC"
     - ${args}
 metric:
     goal: minimize
