--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweep_Adam.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweep_Adam.yaml
@@ -4,7 +4,7 @@ command:
     - python
     - ${program}
     - "--wandb"
-    - "--optimizer=KFAC"
+    - "--optimizer=Adam"
     - ${args}
 metric:
     goal: minimize
@@ -12,12 +12,8 @@ metric:
 method: random
 parameters:
     num_steps:
-        value: 1_000
-    lr:
+        value: 10_000
+    Adam_lr:
+        distribution: log_uniform_values
         min: 5e-4
         max: 5e-1
-        distribution: log_uniform_values
-    damping:
-        min: 1e-7
-        max: 1e-0
-        distribution: log_uniform_values
