--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweep_SGD.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweep_SGD.yaml
@@ -4,7 +4,7 @@ command:
     - python
     - ${program}
     - "--wandb"
-    - "--optimizer=Adam"
+    - "--optimizer=SGD"
     - ${args}
 metric:
     goal: minimize
@@ -13,7 +13,10 @@ method: random
 parameters:
     num_steps:
         value: 10_000
-    lr:
+    SGD_lr:
         distribution: log_uniform_values
         min: 5e-4
         max: 5e-1
+    SGD_momentum:
+        distribution: categorical
+        values: [0.0, 0.3, 0.6, 0.9]
