--- a/setup.cfg
+++ b/setup.cfg
@@ -35,9 +35,11 @@ install_requires = # NOTE: Probably a good idea to pins versions for reproducibi
     numpy==1.26.2
     einops==0.7.0
     matplotlib==3.8.2
+    tueplots==0.0.14
     scipy==1.12.0
     wandb==0.16.3
     hessianfree @ git+https://git@github.com/ltatzel/PyTorchHessianFree.git@daa6c749df3ac847b41191dc288da863fdd79be5
+    pandas==2.2.1
     # backpack-for-pytorch @ git+https://git@github.com/f-dangel/backpack.git@development#egg=backpack-for-pytorch
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
