--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweep_ENGD_per_layer.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweep_ENGD_per_layer.yaml
@@ -1,6 +1,6 @@
 entity: kfac-pinns
 project: poisson2d
-name: ENGD_full
+name: ENGD_per_layer
 program: ../train.py
 command:
     - ${env}
@@ -8,22 +8,19 @@ command:
     - ${program}
     - "--wandb"
     - "--optimizer=ENGD"
-    - ${args_no_boolean_flags}
+    - ${args}
 metric:
     goal: minimize
     name: loss
 method: grid
 parameters:
     num_steps:
-        value: 500
+        value: 10_000
     ENGD_approximation:
-        value: full
+        value: per_layer
     ENGD_damping:
         distribution: categorical
         values: [0.0, 1e-2, 1e-4, 1e-6, 1e-8]
     ENGD_ema_factor:
         distribution: categorical
         values: [0.0, 0.3, 0.6, 0.9, 0.99]
-    ENGD_initialize_to_identity:
-        distribution: categorical
-        values: [false, true]
