--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ install_requires = # NOTE: Probably a good idea to pins versions for reproducibi
     einops==0.7.0
     matplotlib==3.8.2
     tueplots==0.0.14
+    palettable==3.3.3
     scipy==1.12.0
     wandb==0.16.3
     hessianfree @ git+https://git@github.com/ltatzel/PyTorchHessianFree.git@daa6c749df3ac847b41191dc288da863fdd79be5
