[ADD] Plot results for Poisson2d (#35)
* [ADD] Create dummy sweep for SGD

* [FIX] yaml files [no ci]

* [ADD] Dummy sweep for Adam [no ci]

* [ADD] Code for downloading results from wandb and plotting [no ci]

* [ADD] Fix project and entity in .yaml config, add sweep for ENGD [no ci]

* [ADD] Fix sweep for ENGD [no ci]

* [ADD] Update ENGD sweep [no ci]

* [ADD] Sweeps for other ENGD approximations, tune `initialize_to_identity` [no ci]

* [ADD] Sweep for HessianFree [no ci]

* [ADD] Sweep for LBFGS [no ci]

* [ADD] SGD sweep for Poisson5d [no ci]

* [ADD] Adam sweep for Poisson5d [no ci]

* [ADD] Update plotting script

* [DEL] Remove dead code

* [DEL] Unused imports

* [DEL] Remove `exp10` directory

* [ADD] Plot LBFGS curve

* [ADD] Best runs for Poisson2d, execute plotting script in CI

* [REF] Store best runs in folder

* [FIX] Missing docstring

* [DEL] Duplicate csv files

* [ADD] Plot of Poisson2d

--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweep_LBFGS.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweep_LBFGS.yaml
@@ -1,26 +1,24 @@
 entity: kfac-pinns
 project: poisson2d
-name: SGD
+name: LBFGS
 program: ../train.py
 command:
     - ${env}
     - python
     - ${program}
     - "--wandb"
-    - "--optimizer=SGD"
+    - "--optimizer=LBFGS"
     - ${args}
 metric:
     goal: minimize
     name: loss
-method: random
-run_cap: 50
+method: grid
 parameters:
     num_steps:
         value: 10_000
-    SGD_lr:
-        distribution: log_uniform_values
-        min: 5e-4
-        max: 5e-1
-    SGD_momentum:
+    LBFGS_lr:
         distribution: categorical
-        values: [0.0, 0.3, 0.6, 0.9]
+        values: [10.0, 5.0, 1.0, 0.5, 0.1, 0.05, 0.01, 0.005, 0.001]
+    LBFGS_history_size:
+        distribution: categorical
+        values: [10, 25, 50, 75, 100, 150]
