--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweep_Adam.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweep_Adam.yaml
@@ -1,4 +1,7 @@
-program: train.py
+entity: kfac-pinns
+project: poisson2d
+name: Adam
+program: ../train.py
 command:
     - ${env}
     - python
@@ -10,6 +13,7 @@ metric:
     goal: minimize
     name: loss
 method: random
+run_cap: 50
 parameters:
     num_steps:
         value: 10_000
