--- a/kfac_pinns_exp/exp10_reproduce_poisson5d/sweep_HessianFree.yaml
+++ b/kfac_pinns_exp/exp10_reproduce_poisson5d/sweep_HessianFree.yaml
@@ -1,5 +1,5 @@
 entity: kfac-pinns
-project: poisson2d
+project: poisson5d
 name: HessianFree
 program: ../train.py
 command:
@@ -15,6 +15,12 @@ metric:
 method: grid
 parameters:
     num_steps:
+        value: 2_000
+    dim_Omega:
+        value: 5
+    N_Omega:
+        value: 3_000
+    N_dOmega:
         value: 500
     HessianFree_curvature_opt:
         distribution: categorical
