--- a/kfac_pinns_exp/exp11_poisson2d_deep/sweeps/ENGD_per_layer.yaml
+++ b/kfac_pinns_exp/exp11_poisson2d_deep/sweeps/ENGD_per_layer.yaml
@@ -14,6 +14,8 @@ metric:
     name: loss
 method: grid
 parameters:
+    model:
+        value: mlp-tanh-64-48-32-16
     num_steps:
         value: 10_000
     ENGD_approximation:
