--- a/kfac_pinns_exp/exp11_poisson2d_deep/sweeps/HessianFree.yaml
+++ b/kfac_pinns_exp/exp11_poisson2d_deep/sweeps/HessianFree.yaml
@@ -1,7 +1,6 @@
-
 entity: kfac-pinns
 project: poisson2d_deep
-name: ENGD_diagonal
+name: HessianFree
 program: ../../train.py
 command:
     - ${env}
@@ -15,6 +14,8 @@ metric:
     name: loss
 method: grid
 parameters:
+    model:
+        value: mlp-tanh-64-48-32-16
     num_steps:
         value: 500
     HessianFree_curvature_opt:
