--- a/kfac_pinns_exp/exp11_poisson2d_deep/sweeps/SGD.yaml
+++ b/kfac_pinns_exp/exp11_poisson2d_deep/sweeps/SGD.yaml
@@ -15,6 +15,8 @@ metric:
 method: random
 run_cap: 50
 parameters:
+    model:
+        value: mlp-tanh-64-48-32-16
     num_steps:
         value: 10_000
     SGD_lr:
