[FIX] Sweep for ENGD-per-layer [no ci]

--- a/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/ENGD_per_layer.yaml
+++ b/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/ENGD_per_layer.yaml
@@ -1,7 +1,7 @@
 entity: kfac-pinns
 project: poisson5d
 name: ENGD_per_layer
-program: ../train.py
+program: ../../train.py
 command:
     - ${env}
     - python
