--- a/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/ENGD_full.yaml
+++ b/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/ENGD_full.yaml
@@ -1,13 +1,13 @@
 entity: kfac-pinns
-project: poisson2d
-name: HessianFree
+project: poisson5d
+name: ENGD_full
 program: ../train.py
 command:
     - ${env}
     - python
     - ${program}
     - "--wandb"
-    - "--optimizer=HessianFree"
+    - "--optimizer=ENGD"
     - ${args_no_boolean_flags}
 metric:
     goal: minimize
@@ -15,16 +15,21 @@ metric:
 method: grid
 parameters:
     num_steps:
+        value: 2_000
+    dim_Omega:
+        value: 5
+    N_Omega:
+        value: 3_000
+    N_dOmega:
         value: 500
-    HessianFree_curvature_opt:
+    ENGD_approximation:
+        value: full
+    ENGD_damping:
         distribution: categorical
-        values: ["ggn", "hessian"]
-    HessianFree_damping:
+        values: [0.0, 1e-2, 1e-4, 1e-6, 1e-8]
+    ENGD_ema_factor:
         distribution: categorical
-        values: [100, 1.0, 1e-2, 1e-4, 1e-6]
-    HessianFree_no_adapt_damping:
+        values: [0.0, 0.3, 0.6, 0.9, 0.99]
+    ENGD_initialize_to_identity:
         distribution: categorical
         values: [false, true]
-    HessianFree_cg_max_iter:
-        distribution: categorical
-        values: [50, 250]
