--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/LBFGS.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/LBFGS.yaml
@@ -1,7 +1,7 @@
 entity: kfac-pinns
 project: poisson2d
 name: LBFGS
-program: ../train.py
+program: ../../train.py
 command:
     - ${env}
     - python
