--- a/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/Adam.yaml
+++ b/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/Adam.yaml
@@ -1,7 +1,7 @@
 entity: kfac-pinns
 project: poisson5d
 name: Adam
-program: ../train.py
+program: ../../train.py
 command:
     - ${env}
     - python
