[ADD] Refine all optimizer sweeps on Poisson2d [no ci]

--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/HessianFree.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/HessianFree.yaml
@@ -15,7 +15,7 @@ metric:
 method: grid
 parameters:
     num_steps:
-        value: 500
+        value: 10_000
     HessianFree_curvature_opt:
         distribution: categorical
         values: ["ggn", "hessian"]
