--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/ENGD_diagonal.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/ENGD_diagonal.yaml
@@ -20,7 +20,7 @@ parameters:
         value: diagonal
     ENGD_damping:
         distribution: categorical
-        values: [0.0, 1e-2, 1e-4, 1e-6, 1e-8]
+        values: [1e-4, 1e-6, 1e-8, 1e-10, 0.0]
     ENGD_ema_factor:
         distribution: categorical
         values: [0.0, 0.3, 0.6, 0.9, 0.99]
