--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/KFAC_empirical.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/KFAC_empirical.yaml
@@ -16,13 +16,13 @@ metric:
 method: grid
 parameters:
     num_steps:
-        value: 5_000
+        value: 10_000
     KFAC_ema_factor:
         distribution: categorical
         values: [0., 0.5, 0.95, 0.99]
     KFAC_damping:
         distribution: categorical
-        values: [1e0, 1e-2, 1e-4, 1e-6, 1e-8, 1e-10]
+        values: [1e-4, 1e-6, 1e-8, 1e-10, 1e-12, 0.0]
     KFAC_initialize_to_identity:
         distribution: categorical
         values: [false, true]
