--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/LBFGS.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/LBFGS.yaml
@@ -18,7 +18,7 @@ parameters:
         value: 10_000
     LBFGS_lr:
         distribution: categorical
-        values: [10.0, 5.0, 1.0, 0.5, 0.1, 0.05, 0.01, 0.005, 0.001]
+        values: [1.0, 0.5, 0.2, 0.1, 0.05, 0.02, 0.01]
     LBFGS_history_size:
         distribution: categorical
-        values: [10, 25, 50, 75, 100, 150]
+        values: [50, 75, 100, 125, 150, 175, 200]
