--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/SGD.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/SGD.yaml
@@ -19,8 +19,8 @@ parameters:
         value: 10_000
     SGD_lr:
         distribution: log_uniform_values
-        min: 5e-4
-        max: 5e-1
+        min: 1e-3
+        max: 1e-1
     SGD_momentum:
         distribution: categorical
-        values: [0.0, 0.3, 0.6, 0.9]
+        values: [0.0, 0.3, 0.6, 0.9, 0.99]
