[FIX] Bug in KFAC, update Poisson2d sweeps, add GGN type options in KFAC (#41)
* [ADD] Sweep config for KFAC on Poisson2d [no ci]

* [ADD] Launch command for KFAC on Poisson2d [no ci]

* [ADD] Check boundary KFAC for batch size 1

* [FIX] Typo

* [FIX] Linter problems after merge

* [REF] Extrac basis transformation from gramian to KFAC

* [DEBUG] Add debugging flags in KFAC

* [ADD] Start debugging log [no ci]

* [DEL] Remove `0` [no ci]

* [FIX] Typo [no ci]

* [DEBUG] Move from `inverse` to `lstsq` [no ci]

* [REF] Make `gramian_basis_to_kfac_basis` support vectors

* [FIX] Bug: Use `bias.grad` rather than `bias` [no ci]

* [ADD] Sweep for KFAC, introduce 1/sqrt(N) in backproped error [no ci]

* [ADD] Update Figure on Poisson2d [no ci]

* [ADD] Option to backpropagate empirical gradient rather than loss Hessian [no ci]

* [ADD] Sweep for KFAC-empirical on Poisson2d [no ci]

* [ADD] GGN-type 'forward-only' option and sweep [no ci]

* [ADD] Update launch script [no ci]

* [ADD] Refine all optimizer sweeps on Poisson2d [no ci]

* [ADD] Utility to clean up unused runs

* [ADD] Fine-tune Adam, SGD, and LBFGS sweeps [no ci]

* [ADD] Update Poisson2d figures, also plot L2 error [no ci]

* [REF] Remove debugging code and add missing docstrings

* [ADD] Test different GGN types in KFAC

* [DOC] Document KFAC class attributes

* [DEL] Debugging log

--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/SGD.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/SGD.yaml
@@ -16,11 +16,11 @@ method: random
 run_cap: 50
 parameters:
     num_steps:
-        value: 10_000
+        value: 50_000
     SGD_lr:
         distribution: log_uniform_values
-        min: 5e-4
-        max: 5e-1
+        min: 1e-3
+        max: 1e-1
     SGD_momentum:
         distribution: categorical
-        values: [0.0, 0.3, 0.6, 0.9]
+        values: [0.0, 0.3, 0.6, 0.9, 0.99]
