--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/KFAC_forward_only.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/KFAC_forward_only.yaml
@@ -1,13 +1,14 @@
 entity: kfac-pinns
 project: poisson2d
-name: ENGD_full
+name: KFAC-forward-only
 program: ../../train.py
 command:
     - ${env}
     - python
     - ${program}
     - "--wandb"
-    - "--optimizer=ENGD"
+    - "--optimizer=KFAC"
+    - "--KFAC_ggn_type=forward-only"
     - ${args_no_boolean_flags}
 metric:
     goal: minimize
@@ -16,14 +17,12 @@ method: grid
 parameters:
     num_steps:
         value: 10_000
-    ENGD_approximation:
-        value: full
-    ENGD_damping:
+    KFAC_ema_factor:
         distribution: categorical
-        values: [1e-6, 1e-8, 1e-10, 1e-12, 0.0]
-    ENGD_ema_factor:
+        values: [0., 0.5, 0.95, 0.99]
+    KFAC_damping:
         distribution: categorical
-        values: [0.0, 0.3, 0.6, 0.9, 0.99]
-    ENGD_initialize_to_identity:
+        values: [1e0, 1e-2, 1e-4, 1e-6, 1e-8, 1e-10]
+    KFAC_initialize_to_identity:
         distribution: categorical
         values: [false, true]
