--- a/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/ENGD_full.yaml
+++ b/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/ENGD_full.yaml
@@ -15,7 +15,7 @@ metric:
 method: grid
 parameters:
     num_steps:
-        value: 2_000
+        value: 50_000
     dim_Omega:
         value: 5
     N_Omega:
@@ -26,10 +26,10 @@ parameters:
         value: full
     ENGD_damping:
         distribution: categorical
-        values: [0.0, 1e-2, 1e-4, 1e-6, 1e-8]
+        values: [1e-8, 1e-9, 1e-10, 1e-11, 1e-12, 0.0]
     ENGD_ema_factor:
         distribution: categorical
-        values: [0.0, 0.3, 0.6, 0.9, 0.99]
+        values: [0.0, 0.3, 0.6, 0.9]
     ENGD_initialize_to_identity:
         distribution: categorical
         values: [false, true]
