--- a/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/KFAC.yaml
+++ b/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/KFAC.yaml
@@ -1,13 +1,13 @@
 entity: kfac-pinns
 project: poisson5d
-name: HessianFree
+name: KFAC
 program: ../../train.py
 command:
     - ${env}
     - python
     - ${program}
     - "--wandb"
-    - "--optimizer=HessianFree"
+    - "--optimizer=KFAC"
     - ${args_no_boolean_flags}
 metric:
     goal: minimize
@@ -22,15 +22,12 @@ parameters:
         value: 3_000
     N_dOmega:
         value: 500
-    HessianFree_curvature_opt:
+    KFAC_ema_factor:
         distribution: categorical
-        values: ["ggn", "hessian"]
-    HessianFree_damping:
+        values: [0., 0.5, 0.95, 0.99]
+    KFAC_damping:
         distribution: categorical
-        values: [1.0, 1e-1, 1e-2, 1e-3, 1e-4]
-    HessianFree_no_adapt_damping:
+        values: [1e-4, 1e-6, 1e-8, 1e-10, 1e-12, 0]
+    KFAC_initialize_to_identity:
         distribution: categorical
         values: [false, true]
-    HessianFree_cg_max_iter:
-        distribution: categorical
-        values: [50, 250]
