--- a/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/LBFGS.yaml
+++ b/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/LBFGS.yaml
@@ -15,7 +15,7 @@ metric:
 method: grid
 parameters:
     num_steps:
-        value: 20_000
+        value: 50_000
     dim_Omega:
         value: 5
     N_Omega:
@@ -24,7 +24,7 @@ parameters:
         value: 500
     LBFGS_lr:
         distribution: categorical
-        values: [10.0, 5.0, 1.0, 0.5, 0.1, 0.05, 0.01, 0.005, 0.001]
+        values: [0.5, 0.2, 0.1, 0.05, 0.02, 0.01]
     LBFGS_history_size:
         distribution: categorical
-        values: [10, 25, 50, 75, 100, 150]
+        values: [50, 75, 100, 125, 150, 175, 200, 225]
