--- a/kfac_pinns_exp/exp11_poisson2d_deep/sweeps/ENGD_per_layer.yaml
+++ b/kfac_pinns_exp/exp11_poisson2d_deep/sweeps/ENGD_per_layer.yaml
@@ -22,7 +22,7 @@ parameters:
         value: per_layer
     ENGD_damping:
         distribution: categorical
-        values: [0.0, 1e-2, 1e-4, 1e-6, 1e-8]
+        values: [1e-6, 1e-8, 1e-10, 1e-12, 0.0]
     ENGD_ema_factor:
         distribution: categorical
         values: [0.0, 0.3, 0.6, 0.9, 0.99]
