--- a/kfac_pinns_exp/exp11_poisson2d_deep/sweeps/HessianFree.yaml
+++ b/kfac_pinns_exp/exp11_poisson2d_deep/sweeps/HessianFree.yaml
@@ -17,13 +17,13 @@ parameters:
     model:
         value: mlp-tanh-64-48-32-16
     num_steps:
-        value: 500
+        value: 10_000
     HessianFree_curvature_opt:
         distribution: categorical
         values: ["ggn", "hessian"]
     HessianFree_damping:
         distribution: categorical
-        values: [100, 1.0, 1e-2, 1e-4, 1e-6]
+        values: [1_000, 100, 1.0, 1e-1, 1e-2]
     HessianFree_no_adapt_damping:
         distribution: categorical
         values: [false, true]
