--- a/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/KFAC.yaml
+++ b/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/KFAC.yaml
@@ -27,7 +27,7 @@ parameters:
         values: [0., 0.5, 0.95, 0.99]
     KFAC_damping:
         distribution: categorical
-        values: [1e-4, 1e-6, 1e-8, 1e-10, 1e-12, 0]
+        values: [1e-2, 1e-3, 1e-4, 1e-6, 1e-8, 1e-10]
     KFAC_initialize_to_identity:
         distribution: categorical
         values: [false, true]
