[ADD] Change Poisson5d to use sum of cos boundary conditions [no ci]

--- a/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/Adam.yaml
+++ b/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/Adam.yaml
@@ -15,6 +15,8 @@ metric:
 method: random
 run_cap: 50
 parameters:
+    equation:
+        value: poisson_cos_sum
     num_steps:
         value: 500_000
     dim_Omega:
