--- a/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/ENGD_diagonal.yaml
+++ b/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/ENGD_diagonal.yaml
@@ -14,6 +14,8 @@ metric:
     name: loss
 method: grid
 parameters:
+    equation:
+        value: poisson_cos_sum
     num_steps:
         value: 50_000
     dim_Omega:
