[ADD] Change Poisson5d-deep to sum of cos boundary conditions [no ci]

--- a/kfac_pinns_exp/exp12_poisson5d_deep/sweeps/Adam.yaml
+++ b/kfac_pinns_exp/exp12_poisson5d_deep/sweeps/Adam.yaml
@@ -15,6 +15,8 @@ metric:
 method: random
 run_cap: 50
 parameters:
+    equation:
+        value: poisson_cos_sum
     model:
         value: mlp-tanh-64-48-32-16
     num_steps:
