--- a/kfac_pinns_exp/exp12_poisson5d_deep/sweeps/HessianFree.yaml
+++ b/kfac_pinns_exp/exp12_poisson5d_deep/sweeps/HessianFree.yaml
@@ -14,6 +14,8 @@ metric:
     name: loss
 method: grid
 parameters:
+    equation:
+        value: poisson_cos_sum
     model:
         value: mlp-tanh-64-48-32-16
     num_steps:
