--- a/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/KFAC_forward_only.yaml
+++ b/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/KFAC_forward_only.yaml
@@ -14,7 +14,7 @@ metric:
     name: loss
 method: grid
 parameters:
-    equation:
+    boundary_condition:
         value: poisson_cos_sum
     num_steps:
         value: 50_000
