--- a/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/SGD.yaml
+++ b/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/SGD.yaml
@@ -15,7 +15,7 @@ metric:
 method: random
 run_cap: 50
 parameters:
-    equation:
+    boundary_condition:
         value: poisson_cos_sum
     num_steps:
         value: 500_000
