--- a/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/ENGD_diagonal.yaml
+++ b/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/ENGD_diagonal.yaml
@@ -1,13 +1,13 @@
 entity: kfac-pinns
-project: heat2d
-name: HessianFree
+project: heat1d
+name: ENGD_diagonal
 program: ../../train.py
 command:
     - ${env}
     - python
     - ${program}
     - "--wandb"
-    - "--optimizer=HessianFree"
+    - "--optimizer=ENGD"
     - ${args_no_boolean_flags}
 metric:
     goal: minimize
@@ -18,15 +18,14 @@ parameters:
         value: heat
     num_steps:
         value: 10_000
-    HessianFree_curvature_opt:
+    ENGD_approximation:
+        value: diagonal
+    ENGD_damping:
         distribution: categorical
-        values: ["ggn", "hessian"]
-    HessianFree_damping:
+        values: [1e-4, 1e-6, 1e-8, 1e-10, 0.0]
+    ENGD_ema_factor:
         distribution: categorical
-        values: [100, 1.0, 1e-2, 1e-4, 1e-6]
-    HessianFree_no_adapt_damping:
+        values: [0.0, 0.3, 0.6, 0.9, 0.99]
+    ENGD_initialize_to_identity:
         distribution: categorical
         values: [false, true]
-    HessianFree_cg_max_iter:
-        distribution: categorical
-        values: [50, 250]
