--- a/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/HessianFree.yaml
+++ b/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/HessianFree.yaml
@@ -1,13 +1,13 @@
 entity: kfac-pinns
-project: heat2d
-name: KFAC
+project: heat1d
+name: HessianFree
 program: ../../train.py
 command:
     - ${env}
     - python
     - ${program}
     - "--wandb"
-    - "--optimizer=KFAC"
+    - "--optimizer=HessianFree"
     - ${args_no_boolean_flags}
 metric:
     goal: minimize
@@ -18,12 +18,15 @@ parameters:
         value: heat
     num_steps:
         value: 10_000
-    KFAC_ema_factor:
+    HessianFree_curvature_opt:
         distribution: categorical
-        values: [0., 0.5, 0.95, 0.99]
-    KFAC_damping:
+        values: ["ggn", "hessian"]
+    HessianFree_damping:
         distribution: categorical
-        values: [1e-4, 1e-6, 1e-8, 1e-10, 1e-12, 0]
-    KFAC_initialize_to_identity:
+        values: [100, 1.0, 1e-2, 1e-4, 1e-6]
+    HessianFree_no_adapt_damping:
         distribution: categorical
         values: [false, true]
+    HessianFree_cg_max_iter:
+        distribution: categorical
+        values: [50, 250]
