--- a/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/KFAC.yaml
+++ b/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/KFAC.yaml
@@ -1,6 +1,6 @@
 entity: kfac-pinns
-project: heat2d
-name: KFAC-forward-only
+project: heat1d
+name: KFAC
 program: ../../train.py
 command:
     - ${env}
@@ -18,14 +18,12 @@ parameters:
         value: heat
     num_steps:
         value: 10_000
-    KFAC_ggn_type:
-        value: forward-only
     KFAC_ema_factor:
         distribution: categorical
         values: [0., 0.5, 0.95, 0.99]
     KFAC_damping:
         distribution: categorical
-        values: [1e0, 1e-2, 1e-4, 1e-6, 1e-8, 1e-10]
+        values: [1e-4, 1e-6, 1e-8, 1e-10, 1e-12, 0]
     KFAC_initialize_to_identity:
         distribution: categorical
         values: [false, true]
