--- a/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/HessianFree.yaml
+++ b/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/HessianFree.yaml
@@ -14,6 +14,8 @@ metric:
     name: loss
 method: grid
 parameters:
+    dim_Omega:
+        value: 1
     equation:
         value: heat
     num_steps:
