--- a/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/SGD.yaml
+++ b/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/SGD.yaml
@@ -15,6 +15,8 @@ metric:
 method: random
 run_cap: 50
 parameters:
+    dim_Omega:
+        value: 1
     equation:
         value: heat
     num_steps:
