--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/KFAC_empirical.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/KFAC_empirical.yaml
@@ -21,6 +21,9 @@ parameters:
     KFAC_ema_factor:
         distribution: categorical
         values: [0., 0.5, 0.95, 0.99]
+    KFAC_momentum:
+        distribution: categorical
+        values: [0., 0.25, 0.5, 0.9]
     KFAC_damping:
         distribution: categorical
         values: [1e-4, 1e-6, 1e-8, 1e-10, 1e-12, 0.0]
