--- a/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/KFAC.yaml
+++ b/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/KFAC.yaml
@@ -12,7 +12,8 @@ command:
 metric:
     goal: minimize
     name: loss
-method: grid
+method: random
+run_cap: 50
 parameters:
     boundary_condition:
         value: poisson_cos_sum
@@ -25,11 +26,17 @@ parameters:
     N_dOmega:
         value: 500
     KFAC_ema_factor:
-        distribution: categorical
-        values: [0., 0.5, 0.95, 0.99]
+        distribution: uniform
+        min: 0
+        max: 0.99
+    KFAC_momentum:
+        distribution: uniform
+        min: 0
+        max: 0.99
     KFAC_damping:
-        distribution: categorical
-        values: [1e-2, 1e-3, 1e-4, 1e-6, 1e-8, 1e-10]
+        distribution: log_uniform_values
+        min: 1e-13
+        max: 1e-7
     KFAC_initialize_to_identity:
         distribution: categorical
         values: [false, true]
