--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/ENGD_per_layer.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/ENGD_per_layer.yaml
@@ -24,3 +24,6 @@ parameters:
     ENGD_ema_factor:
         distribution: categorical
         values: [0.0, 0.3, 0.6, 0.9, 0.99]
+    ENGD_initialize_to_identity:
+        distribution: categorical
+        values: [false, true]
