--- a/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/LBFGS.yaml
+++ b/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/LBFGS.yaml
@@ -15,7 +15,7 @@ metric:
 method: grid
 parameters:
     boundary_condition:
-        value: poisson_cos_sum
+        value: cos_sum
     num_steps:
         value: 50_000
     dim_Omega:
