[ADD] Specify run time limit in `train.py`, add sweeps for exp09 [no ci]

--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/ENGD_full.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/ENGD_full.yaml
@@ -14,8 +14,8 @@ metric:
     name: loss
 method: grid
 parameters:
-    num_steps:
-        value: 10_000
+    num_seconds:
+        value: 1_000
     ENGD_approximation:
         value: full
     ENGD_damping:
