--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/SGD.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/SGD.yaml
@@ -15,8 +15,8 @@ metric:
 method: random
 run_cap: 50
 parameters:
-    num_steps:
-        value: 50_000
+    num_seconds:
+        value: 1_000
     SGD_lr:
         distribution: log_uniform_values
         min: 1e-3
