--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/KFAC_forward_only.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/KFAC_forward_only.yaml
@@ -15,8 +15,8 @@ metric:
 method: random
 run_cap: 50
 parameters:
-    num_steps:
-        value: 10_000
+    num_seconds:
+        value: 1_000
     KFAC_ggn_type:
         value: forward-only
     KFAC_ema_factor:
