--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/LBFGS.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/LBFGS.yaml
@@ -14,8 +14,8 @@ metric:
     name: loss
 method: grid
 parameters:
-    num_steps:
-        value: 10_000
+    num_seconds:
+        value: 1_000
     LBFGS_lr:
         distribution: categorical
         values: [0.5, 0.2, 0.1, 0.05, 0.02, 0.01]
