[REF] Re-create exp11 sweeps, use time limit [no ci]

--- a/kfac_pinns_exp/exp11_poisson2d_deep/sweeps/ENGD_diagonal.yaml
+++ b/kfac_pinns_exp/exp11_poisson2d_deep/sweeps/ENGD_diagonal.yaml
@@ -16,8 +16,8 @@ method: grid
 parameters:
     model:
         value: mlp-tanh-64-48-32-16
-    num_steps:
-        value: 10_000
+    num_seconds:
+        value: 1_000
     ENGD_approximation:
         value: diagonal
     ENGD_damping:
