--- a/kfac_pinns_exp/exp11_poisson2d_deep/sweeps/HessianFree.yaml
+++ b/kfac_pinns_exp/exp11_poisson2d_deep/sweeps/HessianFree.yaml
@@ -16,8 +16,8 @@ method: grid
 parameters:
     model:
         value: mlp-tanh-64-48-32-16
-    num_steps:
-        value: 10_000
+    num_seconds:
+        value: 1_000
     HessianFree_curvature_opt:
         distribution: categorical
         values: ["ggn", "hessian"]
