--- a/kfac_pinns_exp/exp11_poisson2d_deep/sweeps/KFAC_forward_only.yaml
+++ b/kfac_pinns_exp/exp11_poisson2d_deep/sweeps/KFAC_forward_only.yaml
@@ -17,8 +17,8 @@ run_cap: 50
 parameters:
     model:
         value: mlp-tanh-64-48-32-16
-    num_steps:
-        value: 10_000
+    num_seconds:
+        value: 1_000
     KFAC_ggn_type:
         value: forward-only
     KFAC_ema_factor:
