--- a/kfac_pinns_exp/exp11_poisson2d_deep/sweeps/LBFGS.yaml
+++ b/kfac_pinns_exp/exp11_poisson2d_deep/sweeps/LBFGS.yaml
@@ -16,8 +16,8 @@ method: grid
 parameters:
     model:
         value: mlp-tanh-64-48-32-16
-    num_steps:
-        value: 10_000
+    num_seconds:
+        value: 1_000
     LBFGS_lr:
         distribution: categorical
         values: [0.2, 0.1, 0.05, 0.02, 0.01, 0.005]
