[ADD] Use time limit in Poisson5d sweeps [no ci]

--- a/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/Adam.yaml
+++ b/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/Adam.yaml
@@ -17,8 +17,8 @@ run_cap: 50
 parameters:
     boundary_condition:
         value: cos_sum
-    num_steps:
-        value: 500_000
+    num_seconds:
+        value: 3_000
     dim_Omega:
         value: 5
     N_Omega:
