--- a/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/HessianFree.yaml
+++ b/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/HessianFree.yaml
@@ -16,8 +16,8 @@ method: grid
 parameters:
     boundary_condition:
         value: cos_sum
-    num_steps:
-        value: 50_000
+    num_seconds:
+        value: 3_000
     dim_Omega:
         value: 5
     N_Omega:
