--- a/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/Adam.yaml
+++ b/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/Adam.yaml
@@ -19,8 +19,8 @@ parameters:
         value: 1
     equation:
         value: heat
-    num_steps:
-        value: 50_000
+    num_seconds:
+        value: 1_000
     Adam_lr:
         distribution: log_uniform_values
         min: 5e-4
