--- a/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/HessianFree.yaml
+++ b/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/HessianFree.yaml
@@ -18,8 +18,8 @@ parameters:
         value: 1
     equation:
         value: heat
-    num_steps:
-        value: 10_000
+    num_seconds:
+        value: 1_000
     HessianFree_curvature_opt:
         distribution: categorical
         values: ["ggn", "hessian"]
