--- a/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/KFAC.yaml
+++ b/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/KFAC.yaml
@@ -19,8 +19,8 @@ parameters:
         value: 1
     equation:
         value: heat
-    num_steps:
-        value: 10_000
+    num_seconds:
+        value: 1_000
     KFAC_ema_factor:
         distribution: uniform
         min: 0
