--- a/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/LBFGS.yaml
+++ b/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/LBFGS.yaml
@@ -18,8 +18,8 @@ parameters:
         value: 1
     equation:
         value: heat
-    num_steps:
-        value: 10_000
+    num_seconds:
+        value: 1_000
     LBFGS_lr:
         distribution: categorical
         values: [0.5, 0.2, 0.1, 0.05, 0.02, 0.01]
