--- a/kfac_pinns_exp/exp12_poisson5d_deep/sweeps/KFAC_empirical_auto.yaml
+++ b/kfac_pinns_exp/exp12_poisson5d_deep/sweeps/KFAC_empirical_auto.yaml
@@ -1,6 +1,6 @@
 entity: kfac-pinns
 project: poisson5d_deep
-name: KFAC-auto
+name: KFAC-empirical-auto
 program: ../../train.py
 command:
     - ${env}
@@ -27,6 +27,8 @@ parameters:
         value: 3_000
     N_dOmega:
         value: 500
+    KFAC_ggn_type:
+        value: empirical
     KFAC_ema_factor:
         distribution: uniform
         min: 0
