--- a/kfac_pinns_exp/exp14_poisson_100d_weinan/sweeps/KFAC_forward_only.yaml
+++ b/kfac_pinns_exp/exp14_poisson_100d_weinan/sweeps/KFAC_forward_only.yaml
@@ -12,28 +12,37 @@ command:
 metric:
     goal: minimize
     name: loss
-method: grid
+method: random
+run_cap: 50
 parameters:
     boundary_condition:
         value: u_weinan_norm
     model:
-        value: mlp-tanh-64-48-32-16
-    num_steps:
-        value: 50_000
+        value: mlp-tanh-64-64-48-48
+    num_seconds:
+        value: 3_000
+    data_loader:
+        value: GenerativeDataLoader
     dim_Omega:
-        value: 10
+        value: 100
     N_Omega:
-        value: 10_000
+        value: 3_000
     N_dOmega:
-        value: 5_000
+        value: 1_000
     KFAC_ggn_type:
         value: forward-only
     KFAC_ema_factor:
-        distribution: categorical
-        values: [0., 0.5, 0.95, 0.99]
+        distribution: uniform
+        min: 0
+        max: 0.99
+    KFAC_momentum:
+        distribution: uniform
+        min: 0
+        max: 0.99
     KFAC_damping:
-        distribution: categorical
-        values: [100, 10, 1e0, 1e-1, 1e-2, 1e-4]
+        distribution: log_uniform_values
+        min: 1e-13
+        max: 1e-7
     KFAC_initialize_to_identity:
         distribution: categorical
         values: [false, true]
