--- a/kfac_pinns_exp/exp14_poisson_100d_weinan/sweeps/SGD.yaml
+++ b/kfac_pinns_exp/exp14_poisson_100d_weinan/sweeps/SGD.yaml
@@ -18,15 +18,17 @@ parameters:
     boundary_condition:
         value: u_weinan_norm
     model:
-        value: mlp-tanh-64-48-32-16
-    num_steps:
-        value: 500_000
+        value: mlp-tanh-64-64-48-48
+    num_seconds:
+        value: 3_000
+    data_loader:
+        value: GenerativeDataLoader
     dim_Omega:
-        value: 10
+        value: 100
     N_Omega:
-        value: 10_000
+        value: 3_000
     N_dOmega:
-        value: 5_000
+        value: 1_000
     SGD_lr:
         distribution: log_uniform_values
         min: 1e-3
