--- a/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/HessianFree.yaml
+++ b/kfac_pinns_exp/exp10_reproduce_poisson5d/sweeps/HessianFree.yaml
@@ -11,9 +11,11 @@ command:
     - ${args_no_boolean_flags}
 metric:
     goal: minimize
-    name: loss
+    name: l2_error
 method: grid
 parameters:
+    batch_frequency:
+        value: 1
     boundary_condition:
         value: cos_sum
     num_seconds:
