[REF] Initialize KFACs to identity for exp09 [no ci]

--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/KFAC_auto.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/KFAC_auto.yaml
@@ -26,7 +26,6 @@ parameters:
         min: 1e-13
         max: 1e-7
     KFAC_initialize_to_identity:
-        distribution: categorical
-        values: [false, true]
+        value: true
     KFAC_lr:
         value: auto
