--- a/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/KFAC.yaml
+++ b/kfac_pinns_exp/exp09_reproduce_poisson2d/sweeps/KFAC.yaml
@@ -30,5 +30,4 @@ parameters:
         min: 1e-13
         max: 1e-7
     KFAC_initialize_to_identity:
-        distribution: categorical
-        values: [false, true]
+        value: true
