[ADD] Fine-tune KFAC(*) sweeps on heat1d [no ci]

--- a/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/KFAC.yaml
+++ b/kfac_pinns_exp/exp13_reproduce_heat1d/sweeps/KFAC.yaml
@@ -27,12 +27,11 @@ parameters:
         max: 0.99
     KFAC_momentum:
         distribution: uniform
-        min: 0
+        min: 0.5
         max: 0.99
     KFAC_damping:
         distribution: log_uniform_values
         min: 1e-13
         max: 1e-7
     KFAC_initialize_to_identity:
-        distribution: categorical
-        values: [false, true]
+        value: true
