--- a/kfac_pinns_exp/exp27_heat4d_small/sweeps/KFAC.yaml
+++ b/kfac_pinns_exp/exp27_heat4d_small/sweeps/KFAC.yaml
@@ -31,7 +31,7 @@ parameters:
         value: sin_sum
     KFAC_ema_factor:
         distribution: uniform
-        min: 0
+        min: 0.5
         max: 0.99
     KFAC_momentum:
         distribution: uniform
@@ -39,8 +39,7 @@ parameters:
         max: 0.99
     KFAC_damping:
         distribution: log_uniform_values
-        min: 1e-13
-        max: 1e-7
+        min: 1e-12
+        max: 1e-6
     KFAC_initialize_to_identity:
-        distribution: categorical
-        values: [false, true]
+        value: true
