--- a/kfac_pinns_exp/exp27_heat4d_small/sweeps/KFAC_auto.yaml
+++ b/kfac_pinns_exp/exp27_heat4d_small/sweeps/KFAC_auto.yaml
@@ -31,14 +31,13 @@ parameters:
         value: sin_sum
     KFAC_ema_factor:
         distribution: uniform
-        min: 0
+        min: 0.5
         max: 0.99
     KFAC_damping:
         distribution: log_uniform_values
         min: 1e-13
         max: 1e-7
     KFAC_initialize_to_identity:
-        distribution: categorical
-        values: [false, true]
+        value: true
     KFAC_lr:
         value: auto
