[FIX] Forget to initialize to identity in KFAC-auto [no ci]

--- a/kfac_pinns_exp/exp22_heat1d_mlp_tanh_64/sweeps/KFAC_auto.yaml
+++ b/kfac_pinns_exp/exp22_heat1d_mlp_tanh_64/sweeps/KFAC_auto.yaml
@@ -32,7 +32,6 @@ parameters:
         min: 1e-15
         max: 1e-9
     KFAC_initialize_to_identity:
-        distribution: categorical
-        values: [false, true]
+        value: true
     KFAC_lr:
         value: auto
