[ADD] Update exp35 sweeps [no ci]

--- a/kfac_pinns_exp/exp35_fokker_planck1d_isotropic_gaussian/sweeps/ENGD_full.yaml
+++ b/kfac_pinns_exp/exp35_fokker_planck1d_isotropic_gaussian/sweeps/ENGD_full.yaml
@@ -34,7 +34,7 @@ parameters:
         max: 5_000
     batch_frequency:
         min: 0
-        max: 10_000
+        max: 200
     ENGD_approximation:
         value: full
     ENGD_damping:
