--- a/kfac_pinns_exp/exp35_fokker_planck1d_isotropic_gaussian/sweeps/SGD.yaml
+++ b/kfac_pinns_exp/exp35_fokker_planck1d_isotropic_gaussian/sweeps/SGD.yaml
@@ -34,7 +34,7 @@ parameters:
         max: 5_000
     batch_frequency:
         min: 0
-        max: 10_000
+        max: 200
     SGD_lr:
         distribution: log_uniform_values
         min: 1e-6
