[ADD] Update 99+1d log-FP sweeps to fit into GPU RAM

--- a/kfac_pinns_exp/exp45_log_fokker_planck_99d_isotropic_gaussian_random/sweeps/HessianFree.yaml
+++ b/kfac_pinns_exp/exp45_log_fokker_planck_99d_isotropic_gaussian_random/sweeps/HessianFree.yaml
@@ -27,9 +27,9 @@ parameters:
     dim_Omega:
         value: 99
     N_Omega:
-        value: 3_000
-    N_dOmega:
         value: 1_000
+    N_dOmega:
+        value: 500
     HessianFree_curvature_opt:
         distribution: categorical
         values: ["ggn", "hessian"]
