--- a/kfac_pinns_exp/exp45_log_fokker_planck_99d_isotropic_gaussian_random/sweeps/SGD.yaml
+++ b/kfac_pinns_exp/exp45_log_fokker_planck_99d_isotropic_gaussian_random/sweeps/SGD.yaml
@@ -28,9 +28,9 @@ parameters:
     dim_Omega:
         value: 99
     N_Omega:
-        value: 3_000
-    N_dOmega:
         value: 1_000
+    N_dOmega:
+        value: 500
     SGD_lr:
         distribution: log_uniform_values
         min: 1e-3
