--- a/kfac_pinns_exp/exp45_log_fokker_planck_99d_isotropic_gaussian_random/sweeps/KFAC_auto.yaml
+++ b/kfac_pinns_exp/exp45_log_fokker_planck_99d_isotropic_gaussian_random/sweeps/KFAC_auto.yaml
@@ -28,9 +28,9 @@ parameters:
     dim_Omega:
         value: 99
     N_Omega:
-        value: 3_000
-    N_dOmega:
         value: 1_000
+    N_dOmega:
+        value: 500
     KFAC_ema_factor:
         distribution: uniform
         min: 0.999
