--- a/kfac_pinns_exp/exp45_log_fokker_planck_99d_isotropic_gaussian_random/sweeps/LBFGS.yaml
+++ b/kfac_pinns_exp/exp45_log_fokker_planck_99d_isotropic_gaussian_random/sweeps/LBFGS.yaml
@@ -27,9 +27,9 @@ parameters:
     dim_Omega:
         value: 99
     N_Omega:
-        value: 3_000
-    N_dOmega:
         value: 1_000
+    N_dOmega:
+        value: 500
     LBFGS_lr:
         distribution: categorical
         values: [0.5, 0.2, 0.1, 0.05, 0.02, 0.01]
